//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  userId String [pk]
  email String [unique, not null]
  password String [not null]
  username String [not null]
  profileImage String [not null]
  createdAt DateTime [default: `now()`, not null]
  Message Message [not null]
  ChatRoom ChatRoom [not null]
}

Table ChatRoom {
  chatRoomId String [pk]
  chatRoomType ChatRoomType [not null]
  name String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  messages Message [not null]
  User User [not null]
}

Table Message {
  messageId String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  messageType MessageType [not null]
  chatRoomId String [not null]
  chatRoom ChatRoom [not null]
  senderId String [not null]
  sender User [not null]
  content String [not null]
}

Table Sticker {
  stickerId String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  stickerUrl String [not null]
  stickerName String [not null]
}

Enum ChatRoomType {
  PRIVATE
  GROUP
}

Enum MessageType {
  TEXT
  STICKER
}

Ref: Message.chatRoomId > ChatRoom.chatRoomId

Ref: Message.senderId > User.userId